# AI-for-Education

./: .gitignore  Dockerfile  Self-Recommendation Letter.docx  app.py  app_teaching.py  app_xiaohang.py  app_xiaohang_enhanced.py  config.py  config_programming_assistant.py  docker-compose.yml  models.py  nginx.conf  nothing.py  pyproject.toml  redis.conf  requirements.txt  start.ps1  stop.ps1  test.py  test_xiaohang_api.py  运行说明.md
docs/: 代码框架分解规则详解.md  代码框架模块技术文档.md  可能遇到的问题  四种错误划分规则.md  实现细节.md  核心功能开发规划-40天.md  脚手架理论系统设计.md
generator_kit/: CLAUDE.md  __init__.py  config.py  example_usage.py  llm_client.py  models.py  problem_parser.py  test.py  testcase_generator.py  使用说明.md
static/: framework_studio.html  framework_studio.js  hangfudao.html  hangfudao.js  index.html  script.js  styles.css  teaching.js  xiaohang.css  xiaohang.html  xiaohang.js  xiaohang_enhanced.js  xiaohang_framework.js  xiaohang_v2.html  xiaohang_v3.html
static/css/: monaco-editor.css
static/js/: monaco-editor-init.js
teaching_agents/: README.md  __init__.py  core_teaching_agent.py  demo.py  error_analysis_agent.py  feynman_agent.py  memory.py  reverse_turing_agent.py  socratic_agent.py
xiaohang_integration/: .env.example  INTEGRATION_GUIDE.md  example.py  generator_service.py  mutator.py  requirements.txt  retriever.py
