[[tool.uv.index]]
# 设置 pip 镜像源为阿里云，加快下载速度
url = "http://mirrors.aliyun.com/pypi/simple"
default = true

[project]
# 项目基本信息配置
name = "name"
version = "0.1.0"
description = "description"
requires-python = ">=3.9"
dependencies = [
    "asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work",
    "astunparse==1.6.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work",
    "comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "debugpy @ file:///D:/bld/debugpy_1728594250619/work",
    "decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work",
    "download==0.3.5",
    "exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work",
    "executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work",
    "fonttools==4.55.0",
    "idna==3.10",
    "importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work",
    "importlib_resources==6.4.5",
    "ipykernel @ file:///D:/bld/ipykernel_1719845595208/work",
    "ipython @ file:///D:/bld/ipython_1701831845989/work",
    "jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work",
    "jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work",
    "jupyter_core @ file:///D:/bld/jupyter_core_1727163532151/work",
    "kiwisolver==1.4.7",
    "matplotlib==3.9.2",
    "matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work",
    "mindspore @ https://ms-release.obs.cn-north-4.myhuaweicloud.com/2.4.0/MindSpore/cpu/x86_64/mindspore-2.4.0-cp39-cp39-win_amd64.whl#sha256=be53836ba52fd4f6edc2721bbe587f3d19d0a5d3debd1f13c18705801d2f9452",
    "mpmath==1.3.0",
    "nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work",
    "numpy==1.26.4",
    "packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work",
    "parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work",
    "pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work",
    "pillow==11.0.0",
    "platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work",
    "prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work",
    "protobuf==5.28.3",
    "psutil @ file:///D:/bld/psutil_1729847171148/work",
    "PubChemPy==1.0.4",
    "pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work",
    "Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work",
    "pyparsing==3.2.0",
    "python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work",
    "pytz==2024.2",
    "pywin32==307",
    "PyYAML==6.0.2",
    "pyzmq @ file:///D:/bld/pyzmq_1728642354337/work",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "scipy==1.13.1",
    "six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work",
    "sortedcontainers==2.4.0",
    "stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work",
    "sympy==1.13.3",
    "tornado @ file:///D:/bld/tornado_1724956258948/work",
    "tqdm==4.67.0",
    "traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work",
    "typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work",
    "zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1726248574750/work"
]